# TopicosGrafica

./: MatrixSum.cpp  README.md
Clase1/: main
Clase3/: a.out  main.cu
Lab1/: main.cpp
Lab2/: MatrixSum.cpp
Lab3/: main.cu  shared.cuh  sumColsMatrix.cuh  sumColsMatrix.hpp  types.hpp
Lab4/: CMakeLists.txt  file  main.cpp
Lab4/Conv_Compuesta_Kernel_2d/: kernel.cu
Lab4/Conv_Kernel_2d/: Kernel_2d_avg_pool.cu
Lab4/src/: gamma.cu  image_sum.cu  load.cpp  properties.hpp  utils.h
Lab5/: CorrecionGamma.cu
Lab5/Conv_Kernel_2d/: Kernel_2d_avg_pool.cu
Lab6/: Makefile  kernel.cu  kernel.hpp  load.hpp  main.cpp  utils.hpp
Practica1/: CMakeCache.txt  Makefile  OpsImage  cmake_install.cmake  color_ops.hpp  main.cpp
Practica2/: Practica2.py
PracticasJesus/Practica1/: CMakeLists.txt  README.md  color_ops.cpp  main.cpp
PracticasJesus/Practica2/: README.md
PracticasJesus/Practica3/: README.md  practicas_grafica.ipynb
PracticasJesus/Practica4/: README.md
